# sharpelab

./: .gitignore  Makefile  NOTICE.md  README.md  pyproject.toml
configs/agents/: phase4a-mock.yaml
configs/diagnostics/: default.yaml
configs/experiments/: phase2-smoke.yaml
configs/routing/: conservative.yaml
demo/sharpelab/: ar1-assumption-sensitive.json  garch-robust.json  structural-break-abstain.json
docs/: architecture-diagrams.md  demo-script.md  demo-storyboard.md  sharpelab-hackathon-demo-plan.md
scripts/: build_sharpelab_demo_payloads.py
src/sharpelab/: __init__.py  adapter.py  config.py
src/sharpelab/agents/: __init__.py  mock.py  monolithic.py  planner.py  prompts.py  provenance.py  provider.py  reporter.py  reviewer.py  schemas.py  semantic_validation.py  unconstrained.py
src/sharpelab/benchmark/: __init__.py  schemas.py
src/sharpelab/data/: __init__.py  frequency.py  returns.py
src/sharpelab/demo/: __init__.py  examples.py  render.py
src/sharpelab/diagnostics/: __init__.py  _math.py  data_quality.py  dependence.py  distribution.py  evidence_factory.py  provenance.py  registry.py  stability.py  summary.py
src/sharpelab/inference/: __init__.py  block_bootstrap.py  common.py  gaussian.py  hac.py  mertens_psr.py  power.py  sharpe.py
src/sharpelab/orchestration/: __init__.py  adjudicator.py  audit.py  budgets.py  state.py  workflow.py
src/sharpelab/routing/: __init__.py  abstention.py  (+6 more)
tests/integration/: test_sharpelab_demo_payload.py
tests/unit/: test_sharpelab_adapter.py
ui/sharpelab/: README.md  app.js  index.html  styles.css
(+15 files in other folders)
