[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "sharpelab"
version = "0.1.0"
description = "Auditable evidence-governed assumption and robustness explorer for quantitative inference"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2,<3",
    "pydantic>=2.11,<3",
    "pyyaml>=6,<7",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403,<2",
    "pytest>=8.4,<9",
    "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sharpelab"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src", "tests", "scripts"]
venvPath = "."
venv = ".venv"
